--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ notebooks/.ipynb*
 .ipynb_checkpoints
 *.pyc
 .DS_Store
-word2vec_sunghak
+notebooks/word2vec_sunghak.ipynb
 notebooks/nets/*
 blank.ipynb
